// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableChart Should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="grid"
    data-testid="table-chart"
    style="--columns-count: 5; --rows-count: 6;"
  >
    <div
      class="row"
    >
      <div
        class="header"
      >
        Problem solving
      </div>
      <div
        class="header"
      >
        Job knowledge
      </div>
      <div
        class="header"
      >
        Time management
      </div>
      <div
        class="header"
      >
        Communication
      </div>
      <div
        class="header"
      >
        Achievement
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Ariel K."
          class="avatar"
          src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Nicolas_Cage_Deauville_2013.jpg"
        />
        Ariel K.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
      >
        7
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
      >
        3
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
      >
        6
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Kate E."
          class="avatar"
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrHI7Ycu-v_h0GlkoMdN9JGhCmBK2w4uiCLw&usqp=CAU"
        />
        Kate E.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
      >
        2
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(122, 111, 226);"
      >
        9
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
      >
        7
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 235, 204);"
      >
        5
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
      >
        2
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Jerry V."
          class="avatar"
          src="https://hardtickettohomevideo.files.wordpress.com/2015/01/nick-cage-conair.jpg?w=570"
        />
        Jerry V.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
      >
        2
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(89, 75, 219);"
      >
        10
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
      >
        2
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
      >
        1
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
      >
        8
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Kevin H."
          class="avatar"
          src="https://s3-us-west-2.amazonaws.com/flx-editorial-wordpress/wp-content/uploads/2018/02/27181649/Nicolas-Cage-FFF.jpg"
        />
        Kevin H.
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
      >
        8
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
      >
        3
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
      >
        7
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
      >
        4
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Radha R."
          class="avatar"
          src="https://s3-us-west-2.amazonaws.com/flx-editorial-wordpress/wp-content/uploads/2018/09/11172859/Nicolas-Cage-Countdown-Rep.jpg"
        />
        Radha R.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
      >
        6
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
      >
        1
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
      >
        3
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
      >
        1
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
      >
        7
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Maat W."
          class="avatar"
          src="https://media.gq.com/photos/5582f8c409f0bee56440b484/master/pass/entertainment-2011-05-cage-match-nic-cage_300x430.jpg"
        />
        Maat W.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
      >
        6
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(89, 75, 219);"
      >
        10
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
      >
        8
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
      >
        2
      </div>
    </div>
    <div
      class="legend"
    >
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
      >
        1
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
      >
        2
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
      >
        3
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
      >
        4
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(255, 235, 204);"
      >
        5
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
      >
        6
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
      >
        7
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
      >
        8
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(122, 111, 226);"
      >
        9
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(89, 75, 219);"
      >
        10
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableChart Should match snapshot for TableChartCard 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-testid="card-wrapper-container"
  >
    <header
      class="header"
    >
      <div
        class="icon"
        data-testid="card-wrapper-icon"
      >
        <span>
          #
        </span>
      </div>
      <div>
        <div
          class="title"
          data-testid="card-wrapper-title"
        >
          FY21 Revenue
        </div>
        <div
          class="subTitle"
          data-testid="card-wrapper-subtitle"
        >
          As of today, in comparison with last month
        </div>
      </div>
    </header>
    <div
      class="content"
    >
      <div
        class="grid"
        data-testid="table-chart"
        style="--columns-count: 5; --rows-count: 6;"
      >
        <div
          class="row"
        >
          <div
            class="header"
          >
            Problem solving
          </div>
          <div
            class="header"
          >
            Job knowledge
          </div>
          <div
            class="header"
          >
            Time management
          </div>
          <div
            class="header"
          >
            Communication
          </div>
          <div
            class="header"
          >
            Achievement
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="name"
          >
            <img
              alt="Ariel K."
              class="avatar"
              src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Nicolas_Cage_Deauville_2013.jpg"
            />
            Ariel K.
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
          >
            4
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
          >
            7
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
          >
            4
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
          >
            3
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
          >
            6
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="name"
          >
            <img
              alt="Kate E."
              class="avatar"
              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrHI7Ycu-v_h0GlkoMdN9JGhCmBK2w4uiCLw&usqp=CAU"
            />
            Kate E.
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
          >
            2
          </div>
          <div
            class="value"
            style="color: rgb(255, 255, 255); background-color: rgb(122, 111, 226);"
          >
            9
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
          >
            7
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 235, 204);"
          >
            5
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
          >
            2
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="name"
          >
            <img
              alt="Jerry V."
              class="avatar"
              src="https://hardtickettohomevideo.files.wordpress.com/2015/01/nick-cage-conair.jpg?w=570"
            />
            Jerry V.
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
          >
            2
          </div>
          <div
            class="value"
            style="color: rgb(255, 255, 255); background-color: rgb(89, 75, 219);"
          >
            10
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
          >
            2
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
          >
            1
          </div>
          <div
            class="value"
            style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
          >
            8
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="name"
          >
            <img
              alt="Kevin H."
              class="avatar"
              src="https://s3-us-west-2.amazonaws.com/flx-editorial-wordpress/wp-content/uploads/2018/02/27181649/Nicolas-Cage-FFF.jpg"
            />
            Kevin H.
          </div>
          <div
            class="value"
            style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
          >
            8
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
          >
            4
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
          >
            3
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
          >
            7
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
          >
            4
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="name"
          >
            <img
              alt="Radha R."
              class="avatar"
              src="https://s3-us-west-2.amazonaws.com/flx-editorial-wordpress/wp-content/uploads/2018/09/11172859/Nicolas-Cage-Countdown-Rep.jpg"
            />
            Radha R.
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
          >
            6
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
          >
            1
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
          >
            3
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
          >
            1
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
          >
            7
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="name"
          >
            <img
              alt="Maat W."
              class="avatar"
              src="https://media.gq.com/photos/5582f8c409f0bee56440b484/master/pass/entertainment-2011-05-cage-match-nic-cage_300x430.jpg"
            />
            Maat W.
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
          >
            6
          </div>
          <div
            class="value"
            style="color: rgb(255, 255, 255); background-color: rgb(89, 75, 219);"
          >
            10
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
          >
            4
          </div>
          <div
            class="value"
            style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
          >
            8
          </div>
          <div
            class="value"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
          >
            2
          </div>
        </div>
        <div
          class="legend"
        >
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 153, 0);"
          >
            1
          </div>
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 173, 51);"
          >
            2
          </div>
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 194, 102);"
          >
            3
          </div>
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 214, 153);"
          >
            4
          </div>
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(255, 235, 204);"
          >
            5
          </div>
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(222, 219, 248);"
          >
            6
          </div>
          <div
            class="color"
            style="color: rgb(0, 0, 0); background-color: rgb(189, 183, 241);"
          >
            7
          </div>
          <div
            class="color"
            style="color: rgb(255, 255, 255); background-color: rgb(155, 147, 233);"
          >
            8
          </div>
          <div
            class="color"
            style="color: rgb(255, 255, 255); background-color: rgb(122, 111, 226);"
          >
            9
          </div>
          <div
            class="color"
            style="color: rgb(255, 255, 255); background-color: rgb(89, 75, 219);"
          >
            10
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`TableChart Should match snapshot with getColors 1`] = `
<DocumentFragment>
  <div
    class="grid"
    data-testid="table-chart"
    style="--columns-count: 5; --rows-count: 6;"
  >
    <div
      class="row"
    >
      <div
        class="header"
      >
        Problem solving
      </div>
      <div
        class="header"
      >
        Job knowledge
      </div>
      <div
        class="header"
      >
        Time management
      </div>
      <div
        class="header"
      >
        Communication
      </div>
      <div
        class="header"
      >
        Achievement
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Ariel K."
          class="avatar"
          src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Nicolas_Cage_Deauville_2013.jpg"
        />
        Ariel K.
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(66, 66, 66);"
      >
        7
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        3
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(20, 20, 20);"
      >
        6
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Kate E."
          class="avatar"
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrHI7Ycu-v_h0GlkoMdN9JGhCmBK2w4uiCLw&usqp=CAU"
        />
        Kate E.
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        2
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(158, 158, 158);"
      >
        9
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(66, 66, 66);"
      >
        7
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        5
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        2
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Jerry V."
          class="avatar"
          src="https://hardtickettohomevideo.files.wordpress.com/2015/01/nick-cage-conair.jpg?w=570"
        />
        Jerry V.
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        2
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(204, 204, 204);"
      >
        10
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        2
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        1
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(112, 112, 112);"
      >
        8
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Kevin H."
          class="avatar"
          src="https://s3-us-west-2.amazonaws.com/flx-editorial-wordpress/wp-content/uploads/2018/02/27181649/Nicolas-Cage-FFF.jpg"
        />
        Kevin H.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(112, 112, 112);"
      >
        8
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        3
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(66, 66, 66);"
      >
        7
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        4
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Radha R."
          class="avatar"
          src="https://s3-us-west-2.amazonaws.com/flx-editorial-wordpress/wp-content/uploads/2018/09/11172859/Nicolas-Cage-Countdown-Rep.jpg"
        />
        Radha R.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(20, 20, 20);"
      >
        6
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        1
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        3
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        1
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(66, 66, 66);"
      >
        7
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="name"
      >
        <img
          alt="Maat W."
          class="avatar"
          src="https://media.gq.com/photos/5582f8c409f0bee56440b484/master/pass/entertainment-2011-05-cage-match-nic-cage_300x430.jpg"
        />
        Maat W.
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(20, 20, 20);"
      >
        6
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(204, 204, 204);"
      >
        10
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        4
      </div>
      <div
        class="value"
        style="color: rgb(0, 0, 0); background-color: rgb(112, 112, 112);"
      >
        8
      </div>
      <div
        class="value"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        2
      </div>
    </div>
    <div
      class="legend"
    >
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        1
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        2
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        3
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        4
      </div>
      <div
        class="color"
        style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
      >
        5
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(20, 20, 20);"
      >
        6
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(66, 66, 66);"
      >
        7
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(112, 112, 112);"
      >
        8
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(158, 158, 158);"
      >
        9
      </div>
      <div
        class="color"
        style="color: rgb(0, 0, 0); background-color: rgb(204, 204, 204);"
      >
        10
      </div>
    </div>
  </div>
</DocumentFragment>
`;
